Add reviewers comments doc and start of minor updates

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -3,7 +3,7 @@ title: "Reproducibility of COVID-19 pre-prints"
 author: 
   - Annie Collins^[University of Toronto.]
   - Rohan Alexander^[University of Toronto, rohan.alexander@utoronto.ca.]
-thanks: "**Preprint:** This present manuscript is a version of a preprint by the authors [@collins2021reproducibility]. The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. **Acknowledgements:** We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. **Funding statement:** Collins thanks CANSSI Ontario and Monica Alexander for financial support. **Data accessibility statement:** Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints. **Author contributions:** Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version."
+thanks: "**Preprint:** This present manuscript is a version of a preprint by the authors [@collins2021reproducibility]. The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. **Acknowledgements:** We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Two anonymous reviewers and the editor provided extensive comments that substantially improved this paper and we are grateful to them. **Funding statement:** Collins thanks CANSSI Ontario and Monica Alexander for financial support. **Data accessibility statement:** Code and data are available at: https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints. **Author contributions:** Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "To examine the reproducibility of COVID-19 research, we create a dataset of pre-prints posted to arXiv, bioRxiv, medRxiv, and SocArXiv between 28 January 2020 and 30 June 2021 that are related to COVID-19. We extract the text from these pre-prints and parse them looking for keyword markers signalling the availability of the data and code underpinning the pre-print. For the pre-prints that are in our sample, we are unable to find markers of either open data or open code for 75 per cent of those on arXiv, 67 per cent of those on bioRxiv, 79 per cent of those on medRxiv, and 85 per cent of those on SocArXiv. We conclude that there may be value in having authors categorize the degree of openness of their pre-print as part of the pre-print submissions process, and more broadly, there is a need to better integrate open science training into a wide range of fields."
 output:
@@ -71,9 +71,9 @@ all_arxiv_results <-
 
 # Introduction
 
-Scientists use open repositories of papers to disseminate their research more quickly than is possible in traditional journals or conference proceedings. These repositories, such as arXiv, bioRxiv, medRxiv, and SocArXiv, are a critical component of scientific communication and a lot of research builds on the pre-prints posted there. Pre-print repositories have been especially important during the 2019 novel coronavirus (COVID-19) pandemic and the changes it has imposed on the scientific community [@else2020]. The centrality of pre-prints to science means that it is important that the results that are posted are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a pre-print.
+Scientists use open repositories of papers to disseminate their research more quickly than is possible in traditional journals or conference proceedings, and also to obtain feedback on their work prior to publication. These repositories, such as arXiv, bioRxiv, medRxiv, and SocArXiv, are a critical component of scientific communication and a lot of research builds on the pre-prints posted there. Pre-print repositories have been especially important during the 2019 novel coronavirus (COVID-19) pandemic and the changes it has imposed on the scientific community [@else2020]. The centrality of pre-prints to science means that it is important that the results that are posted are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a pre-print.
 
-Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories are important. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following @weissgerber2021automated, we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. By way of background, each of these four repositories has a different focus: arXiv is general, bioRxiv focuses on biological sciences, medRxiv focuses on health sciences, and SocArXiv focuses on social sciences. We search for markers of open science as indicators of reproducibility, specifically open data and open code. 
+Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories are important. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following @weissgerber2021automated, we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. By way of background, each of these four repositories has a different focus: arXiv is general although it has especially high rates of usage from fields like mathematics, physics, and computer science, bioRxiv focuses on biological sciences, medRxiv focuses on health sciences, and SocArXiv focuses on social sciences. We search for markers of open science as indicators of reproducibility, specifically open data and open code. 
 
 We find that of the papers sampled, approximately 75 per cent of papers from arXiv, 67 per cent of papers from bioRxiv, 79 per cent of papers from medRxiv, and 85 per cent of papers from SocArXiv contain neither open data nor open code markers. A summary of our main results is contained in Figure \@ref(fig:flowchart). Examining trends over time, we find that the proportion of pre-prints containing open data or code markers has fluctuated but shown no obvious trend throughout the pandemic. We also find that the presence of open data or open code markers seems to have little association with a pre-print's subsequent publication, and the subset of sampled pre-prints that have been published contains approximately the same proportion of papers with these markers. 
 <!-- Finally, we briefly examine the presence of open data and code markers in specific types of pre-prints, namely modelling, simulation, and machine learning research. -->
