--- a/outputs/paper/paper.tex
+++ b/outputs/paper/paper.tex
@@ -107,9 +107,9 @@
 \newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{#1}\break}
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
-\title{Reproducibility of COVID-19 pre-prints\thanks{\textbf{Preprint:} This present manuscript is a version of a preprint by the authors (Collins and Alexander 2021). The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. \textbf{Acknowledgements:} We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. \textbf{Funding statement:} Collins thanks CANSSI Ontario and Monica Alexander for financial support. \textbf{Data accessibility statement:} Code and data are available at: \url{https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints}. \textbf{Author contributions:} Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version.}}
+\title{Reproducibility of COVID-19 pre-prints\thanks{\textbf{Preprint:} This present manuscript is a version of a preprint by the authors (Collins and Alexander 2021). The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. \textbf{Acknowledgements:} We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Two anonymous reviewers and the editor provided extensive comments that substantially improved this paper and we are grateful to them. \textbf{Funding statement:} Collins thanks CANSSI Ontario and Monica Alexander for financial support. \textbf{Data accessibility statement:} Code and data are available at: \url{https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints}. \textbf{Author contributions:} Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version.}}
 \author{Annie Collins\footnote{University of Toronto.} \and Rohan Alexander\footnote{University of Toronto, \href{mailto:rohan.alexander@utoronto.ca}{\nolinkurl{rohan.alexander@utoronto.ca}}.}}
-\date{08 December 2021}
+\date{16 December 2021}
 
 \begin{document}
 \maketitle
@@ -120,9 +120,9 @@ To examine the reproducibility of COVID-19 research, we create a dataset of pre-
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-Scientists use open repositories of papers to disseminate their research more quickly than is possible in traditional journals or conference proceedings. These repositories, such as arXiv, bioRxiv, medRxiv, and SocArXiv, are a critical component of scientific communication and a lot of research builds on the pre-prints posted there. Pre-print repositories have been especially important during the 2019 novel coronavirus (COVID-19) pandemic and the changes it has imposed on the scientific community (Else 2020). The centrality of pre-prints to science means that it is important that the results that are posted are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a pre-print.
+Scientists use open repositories of papers to disseminate their research more quickly than is possible in traditional journals or conference proceedings, and also to obtain feedback on their work prior to publication. These repositories, such as arXiv, bioRxiv, medRxiv, and SocArXiv, are a critical component of scientific communication and a lot of research builds on the pre-prints posted there. Pre-print repositories have been especially important during the 2019 novel coronavirus (COVID-19) pandemic and the changes it has imposed on the scientific community (Else 2020). The centrality of pre-prints to science means that it is important that the results that are posted are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a pre-print.
 
-Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories are important. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following Weissgerber et al. (2021), we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. By way of background, each of these four repositories has a different focus: arXiv is general, bioRxiv focuses on biological sciences, medRxiv focuses on health sciences, and SocArXiv focuses on social sciences. We search for markers of open science as indicators of reproducibility, specifically open data and open code.
+Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories are important. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following Weissgerber et al. (2021), we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. By way of background, each of these four repositories has a different focus: arXiv is general although it has especially high rates of usage from fields like mathematics, physics, and computer science, bioRxiv focuses on biological sciences, medRxiv focuses on health sciences, and SocArXiv focuses on social sciences. We search for markers of open science as indicators of reproducibility, specifically open data and open code.
 
 We find that of the papers sampled, approximately 75 per cent of papers from arXiv, 67 per cent of papers from bioRxiv, 79 per cent of papers from medRxiv, and 85 per cent of papers from SocArXiv contain neither open data nor open code markers. A summary of our main results is contained in Figure \ref{fig:flowchart}. Examining trends over time, we find that the proportion of pre-prints containing open data or code markers has fluctuated but shown no obvious trend throughout the pandemic. We also find that the presence of open data or open code markers seems to have little association with a pre-print's subsequent publication, and the subset of sampled pre-prints that have been published contains approximately the same proportion of papers with these markers.
 
