--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -116,6 +116,7 @@ day = {16},
     address = {Vienna, Austria},
     year = {2020},
     url = {https://www.R-project.org/},
+    note    = {{RRID:SCR_001905}},
   }
 
 @Manual{citealexandermafouz,
